--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.7.0",
+    "@chakra-ui/theme-tools": "^2.0.18",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "cookies-next": "^2.1.1",
